instances.tf
/* resource "aws_instance" "dev_ec2" {
  ami = "ami-0bcf5425cdc1d8a85"
  instance_type = "t2.micro"
  count = 1
  key_name  = var.ec2_key_pair_name

  tags = {
    Name = "Dev_EC2"
  }
}
*/
